--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 <body class="bg-light">
     <div class="container w-75"></div>
         <h1 class="text-center text-info my-4">TODO</h1>
+        <button id="edit">編集</button>
         <form id="form" class="mb-4">
             <input type="text" id="input" class="form-control" placeholder="TODOを入力" autocomplete="off">
         </form>
